--- a/public/assets/scss/components/_sidebar.scss
+++ b/public/assets/scss/components/_sidebar.scss
@@ -133,7 +133,7 @@
             position: fixed;
             bottom: 0;
             width: 14.78rem;
-            background-color: sidebar-bg;
+            background-color: $sidebar-bg;
             border: 2px solid var(--bs-primary);
             border-radius: 0.5rem;
             cursor:pointer;
