--- a/public/assets/scss/pages/auth.scss
+++ b/public/assets/scss/pages/auth.scss
@@ -6,14 +6,14 @@ body {
 #auth {
     height: 100vh;
     overflow-x: hidden;
-    
+
     #auth-right {
         height: 100%;
         background:  url(../../static/images/bg/4853433.png), $page-auth-right-bg;
     }
     #auth-left {
         padding: 5rem;
-        
+
         .auth-title {
             font-size: 4rem;
             margin-bottom: 1rem;
@@ -27,6 +27,10 @@ body {
             margin-bottom: 7rem;
             img {
                 height: 2rem;
+            }
+            #logo {
+                width: auto;
+                height: 12rem;
             }
         }
         @media screen and (max-width: 1399.9px) {
