--- a/public/assets/scss/components/_sidebar.scss
+++ b/public/assets/scss/components/_sidebar.scss
@@ -130,6 +130,7 @@
         .sidebar-item-logout {
             list-style: none;
             margin-top: 0.5rem;
+            margin-bottom: 1rem;
             position: fixed;
             bottom: 0;
             width: 14.78rem;
