--- a/public/assets/scss/pages/auth.scss
+++ b/public/assets/scss/pages/auth.scss
@@ -29,8 +29,8 @@ body {
                 height: 2rem;
             }
             #logo {
-                width: auto;
-                height: 12rem;
+                width: 20rem;
+                height: auto;
             }
         }
         @media screen and (max-width: 1399.9px) {
