revisi - 5 fix bug

--- a/public/assets/scss/pages/auth.scss
+++ b/public/assets/scss/pages/auth.scss
@@ -29,7 +29,7 @@ body {
                 height: 2rem;
             }
             #logo {
-                width: 20rem;
+                width: 100%;
                 height: auto;
             }
         }
